src/core/generator/snapshots/tailcall__core__generator__generator__test__dummyjson.com.snap
---
source: src/core/generator/generator.rs
expression: cfg.to_sdl()
---
schema @server @upstream(baseURL: "https://dummyjson.com") {
  query: Query
}

type Query {
  f1(q: String!): T17 @http(path: "/products/search", query: [{key: "q", value: "{{.args.q}}"}])
}

type T1 {
  depth: Int
  height: Int
  width: Int
}

type T16 {
  availabilityStatus: String
  brand: String
  category: String
  description: String
  dimensions: T1
  discountPercentage: Int
  id: Int
  images: [String]
  meta: T3
  minimumOrderQuantity: Int
  price: Int
  rating: Int
  returnPolicy: String
  reviews: [T2]
  shippingInformation: String
  sku: String
  stock: Int
  tags: [String]
  thumbnail: String
  title: String
  warrantyInformation: String
  weight: Int
}

type T17 {
  limit: Int
  products: [T16]
  skip: Int
  total: Int
}

type T2 {
  comment: String
  date: String
  rating: Int
  reviewerEmail: String
  reviewerName: String
}

type T3 {
  barcode: String
  createdAt: String
  qrCode: String
  updatedAt: String
}
