src/core/generator/snapshots/tailcall__core__generator__generator__test__jsonplaceholder.typicode.com.snap
---
source: src/core/generator/generator.rs
expression: cfg.to_sdl()
---
schema @server @upstream(baseURL: "http://jsonplaceholder.typicode.com") {
  query: Query
}

type Query {
  t4: [T4] @http(path: "/users")
}

type T1 {
  lat: String
  lng: String
}

type T2 {
  city: String
  geo: T1
  street: String
  suite: String
  zipcode: String
}

type T3 {
  bs: String
  catchPhrase: String
  name: String
}

type T4 {
  address: T2
  company: T3
  email: String
  id: Int
  name: String
  phone: String
  username: String
  website: String
}
