src/core/generator/snapshots/tailcall__core__generator__generator__test__read_all_with_different_domain_rest_api_gen.snap
---
source: src/core/generator/generator.rs
expression: config.to_sdl()
---
schema @server @upstream(baseURL: "https://jsonplaceholder.typicode.com") {
  query: Query
}

type Query {
  f1(p1: Int!): [T1] @http(path: "/posts/{{.args.p1}}/comments")
  f2(p1: Int!): T2 @http(path: "/posts/{{.args.p1}}")
  f3(q: String): T19 @http(baseURL: "https://dummyjson.com", path: "/products/search", query: [{key: "q", value: "{{.args.q}}"}])
}

type T1 {
  body: String
  email: String
  id: Int
  name: String
  postId: Int
}

type T18 {
  availabilityStatus: String
  brand: String
  category: String
  description: String
  dimensions: T3
  discountPercentage: Int
  id: Int
  images: [String]
  meta: T5
  minimumOrderQuantity: Int
  price: Int
  rating: Int
  returnPolicy: String
  reviews: [T4]
  shippingInformation: String
  sku: String
  stock: Int
  tags: [String]
  thumbnail: String
  title: String
  warrantyInformation: String
  weight: Int
}

type T19 {
  limit: Int
  products: [T18]
  skip: Int
  total: Int
}

type T2 {
  body: String
  id: Int
  title: String
  userId: Int
}

type T3 {
  depth: Int
  height: Int
  width: Int
}

type T4 {
  comment: String
  date: String
  rating: Int
  reviewerEmail: String
  reviewerName: String
}

type T5 {
  barcode: String
  createdAt: String
  qrCode: String
  updatedAt: String
}
