src/core/generator/snapshots/tailcall__core__generator__generator__test__read_all_with_rest_api_gen.snap
---
source: src/core/generator/generator.rs
expression: config.first().unwrap().to_sdl()
---
schema @server @upstream(baseURL: "http://jsonplaceholder.typicode.com") {
  query: Query
}

type Query {
  f1: [T31] @http(path: "/users")
  f2: T35 @http(path: "/users/1")
}

type T1 {
  lat: String
  lng: String
}

type T2 {
  city: String
  geo: T1
  street: String
  suite: String
  zipcode: String
}

type T3 {
  bs: String
  catchPhrase: String
  name: String
}

type T31 {
  address: T2
  company: T3
  email: String
  id: Int
  name: String
  phone: String
  username: String
  website: String
}

type T32 {
  lat: String
  lng: String
}

type T33 {
  city: String
  geo: T32
  street: String
  suite: String
  zipcode: String
}

type T34 {
  bs: String
  catchPhrase: String
  name: String
}

type T35 {
  address: T33
  company: T34
  email: String
  id: Int
  name: String
  phone: String
  username: String
  website: String
}
