src/core/generator/snapshots/tailcall__core__generator__generator__test__should_generate_config_from_proto.snap
---
source: src/core/generator/generator.rs
expression: cfg_module.config().to_sdl()
---
schema @server @upstream @link(src: "{{env.GRPC_REFLECTION}}", type: Protobuf) {
  query: Query
}

input GEN__news__MultipleNewsId {
  ids: [GEN__news__NewsId]
}

input GEN__news__NewsId {
  id: Int
}

input GEN__news__NewsInput {
  body: String
  id: Int
  postImage: String
  status: GEN__news__Status
  title: String
}

enum GEN__news__Status {
  DELETED
  DRAFT
  PUBLISHED
}

type GEN__news__News {
  body: String
  id: Int
  postImage: String
  status: GEN__news__Status
  title: String
}

type GEN__news__NewsList {
  news: [GEN__news__News]
}

type Query {
  GEN__news__NewsService__AddNews(news: GEN__news__NewsInput!): GEN__news__News @grpc(url: "http://localhost:50051", body: "{{.args.news}}", method: "news.NewsService.AddNews")
  GEN__news__NewsService__DeleteNews(newsId: GEN__news__NewsId!): Empty @grpc(url: "http://localhost:50051", body: "{{.args.newsId}}", method: "news.NewsService.DeleteNews")
  GEN__news__NewsService__EditNews(news: GEN__news__NewsInput!): GEN__news__News @grpc(url: "http://localhost:50051", body: "{{.args.news}}", method: "news.NewsService.EditNews")
  GEN__news__NewsService__GetAllNews: GEN__news__NewsList @grpc(url: "http://localhost:50051", method: "news.NewsService.GetAllNews")
  GEN__news__NewsService__GetMultipleNews(multipleNewsId: GEN__news__MultipleNewsId!): GEN__news__NewsList @grpc(url: "http://localhost:50051", body: "{{.args.multipleNewsId}}", method: "news.NewsService.GetMultipleNews")
  GEN__news__NewsService__GetNews(newsId: GEN__news__NewsId!): GEN__news__News @grpc(url: "http://localhost:50051", body: "{{.args.newsId}}", method: "news.NewsService.GetNews")
}
